--- a/playground/package.json
+++ b/playground/package.json
@@ -7,6 +7,8 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.7.2",
     "monaco-editor": "^0.36.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
